* Fixed 64 bit integer fields on 32 bit platforms
* Fixed StaticInt64Field (was actually a uint64 field before)

Version 0.3.7 "Depressive Realism is for Winners" released 2011-11-17

* Add pollstats utility (similar to dstat/vmstat)
* Cleanup development/testing section of the README
* Slight improvements to basic flask integration example

Version 0.3.6 "The M is for Mongo" released 2011-11-09

* Allow setting the value of CounterFields

Version 0.3.5 "Ornery Orangutan" released 2011-10-20

* Added a running average field
* Made mmash more configurable and added a console entry point
* Updated TODO